# frameshift-renderer

./: .gitignore  README.md  build_windows.bat  clean_windows.bat  deps_windows_vcpkg.bat  run.sh  run_native_test_windows.bat  run_windows.bat
java/data/: Historico.txt  codons.tsv  teste_execucao.txt
java/src/jni/: OpenGLBridge.java
java/src/main/: HistoricoWindow.java  Main.java  MainWindow.java
java/src/model/: FileLoader.java  HGVSParser.java  Mutation.java  MutationType.java  ProteinResult.java  Transcript.java  Translator.java
java/src/service/: MutationService.java  ValidationService.java
java/src/ui/: MainWindow.java
native/: CMakeLists.txt
native/include/: engine.h  graphics_math.h  jni_OpenGLBridge.h  shaders_impl.h  text_renderer.h
native/include/glad/: glad.h
native/shaders/: shape.frag  shape.vert  text.frag
native/src/: bridge.cpp  glad.c  renderer.cpp  text_renderer.cpp
